--- a/singerPlay.css
+++ b/singerPlay.css
@@ -5,7 +5,7 @@
 
 body{
     background-image: linear-gradient(122deg,#15153b, #0a0a52);
-
+    overflow: hidden;
 }
 
 .navBar{
@@ -89,13 +89,31 @@ body{
     margin-top: 30px;
     display: flex;
     flex-direction: row;
-
+    box-sizing: border-box;
+    margin-left: 6%;
+    padding: 0% 3%;
+    /* margin-bottom: 70px; */
+    overflow: hidden;
+    transition: all ease-in-out 1s;
+    /* margin-bottom: 5%; */
 }
 
+
+
 .section1{
-    width: 60%;
-    position: relative;
-    left: 8%;
+    width: 65%;
+    height: 86vh;
+    overflow: scroll;
+    overflow-x: hidden;
+    bottom: 5%;
+}
+
+.section1::-webkit-scrollbar{
+    display: none;
+}
+
+.section2::-webkit-scrollbar{
+    display: none;
 }
 
 .border{
@@ -105,7 +123,12 @@ body{
     align-items: center;
     background-image: linear-gradient(122deg, #3e3ecd , #7f7fcc);
     height: auto;
+    box-sizing: border-box;
     
+}
+.border:hover{
+    cursor: pointer;
+    box-shadow: 10px 5px 12px 2px black ;
 }
 
 .border div img{
@@ -114,8 +137,16 @@ body{
     margin: 0px 25px -4px 0px;
 }
 
+aside{
+    display: inline-block;
+    overflow: hidden;
+}
+
 .section2{
-    width: 40%;
+    width: 35%;
+    height: 86vh;
+    overflow: scroll;
+    overflow-x: hidden;
 }
 
 .playButton{
@@ -131,6 +162,7 @@ body{
     height: 40px;
     padding: 10px;
     background-image: linear-gradient(60deg, #60131f,#a07676);
+    cursor: pointer;
 }
 
 .numbers{
@@ -138,6 +170,252 @@ body{
     margin-left: 10px;
     color: white;
 }
+
+/* This is the card part that will store the 
+song in the playlist */
+
+.songList{
+    margin-top: 2%;
+}
+
+.firstPart{
+    display: flex;
+    flex-direction: row;
+    justify-content: center ;
+    align-items: center;
+}
+
+.card{
+    width: 100%;
+    display: flex;
+    height: 60px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgba(26, 26, 29 , .89);
+    color: wheat;
+    /* background-image: linear-gradient(180deg, #2626c6de, #1668c8de); */
+}
+.card:hover{
+    opacity: 0.7;
+    box-shadow: 0px 0px 12px 1px white;
+    cursor: pointer;
+}
+
+.songNameAndImg{
+    display: flex;
+    flex-direction: row;
+
+}
+.faltu{
+    width: 100%;
+    height: 10px;
+}
+.songNameAndImg div:nth-child(1) img{
+    height: 60px;
+    position: relative;
+    top: 3%;
+    margin : 0px 25px;
+
+}
+.songNameAndImg div:nth-child(2) h3 {
+    position: relative;
+    top:15%;
+    margin-bottom: 5px;
+}
+
+
+.icons{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: center;
+}
+.icons div:nth-child(1){
+    margin: 0px 20px;
+}
+.icons div:nth-child(2){
+    margin: 0px 20px;
+}
+
+
+/* Section 2 */
+/* Similar Artist */
+
+.similarArtist{
+    margin-left: 5%;
+    margin-right: 5%;
+    /* content: wheat; */
+}
+
+.heading{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    /* content: wheat; */
+}
+.singleArtistCard:hover{
+    opacity: 0.7;
+    cursor: pointer;
+    box-shadow: 0px 0px 12px 1px white;
+}
+
+.ArtistCard{
+    /* border: 2px red dashed; */
+    height: 100px;
+    width: 100%;
+    position: relative;
+    top: 30px;
+}
+
+.singleArtistCard{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 100px;
+    margin-bottom: 15px;
+}
+
+.artistImage{
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+}
+
+.artistImage div img{
+    height: 100px;
+    width: 133.5px;
+    margin-right: 15px;
+}
+
+.artistDes p{
+    font-size: 13px;
+    color: wheat;
+    margin-top: 10px;
+}
+
+/* DropDown Item css */
+.extraItem{
+    color: wheat;
+}
+.latest-release-dropdown {
+	position: absolute;
+	background-image: linear-gradient(60deg, rgb(16, 22, 39), rgb(42, 42, 80));
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+	opacity: 0;
+	width: 0px;
+	height: 0px;
+	top: 20px;
+	right: 0px;
+	overflow: hidden;
+	z-index: 2;
+	border: 1px solid black;
+	box-shadow: 0px 0px 2px 1px black;
+	transition: all ease-in-out 0.3s;
+    color: wheat;
+}
+
+.fa-ellipsis-h {
+	cursor: pointer;
+}
+/* this input is for the latest release drop down */
+input[type="checkbox"] {
+	display: none;
+}
+/* checking it, will trigger the latest release dropdown */
+input[type="checkbox"]:checked ~ .latest-release-dropdown {
+	width: max-content;
+	height: auto;
+	opacity: 1;
+	padding: 5px;
+}
+/* options in the lastest release drop down */
+.drop-item p {
+	text-align: center;
+}
+
+/* Recently Played */
+
+.recentlyPlayed{
+    position: relative;
+    top: 40vh;
+    margin: 0px 0px;
+}
+
+/* Playlist part this is same in both the css file */
+.playlistContent{
+    width: 100%;
+    display: flex;
+    height: 70vh;
+    flex-direction: column;
+    overflow: scroll;
+    cursor: pointer;
+    overflow-x: hidden;
+}
+.playlistContent::-webkit-scrollbar{
+    display: none;
+}
+
+.leftContent{
+    display: flex;
+    height: 100%;
+    width: 70%;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    text-align: center;
+}
+.playlistItem{
+    width: 100%;
+    height: auto;
+    padding: 0px 1%;
+    box-sizing: border-box;
+    margin: 1%;
+    
+}
+
+.DescriptionOfSong{
+    margin-left: 5%;
+    width: 50%;
+    word-wrap: break-word;
+    color: wheat;
+}
+
+.rightContent {
+	position: relative;
+	bottom: 68%;
+	left: 90%;
+	width: min-content;
+	height: 20px;
+	color: wheat;
+	font-size: 20px;
+}
+
+.rightContent i{
+    transition: all ease-in-out 1.0s;
+}
+.rightContent i:hover{
+    color: red;
+}
+
+.playlistItem:hover{
+    box-shadow: 0px 0px 12px 1px white;
+}
+.playlistItem img{
+    width: 100px;
+    height: 80px;
+}
+.coverer{
+    width: 80px;
+    height: 80px;
+}
+
 
 
 
@@ -148,7 +426,7 @@ body{
 /* Footer part */
 footer{
     position: absolute;
-	bottom: 1px;
+	bottom: 0px;
 	width: 100%;
 	height: 60px;
 	background-color: black;
@@ -266,6 +544,44 @@ footer{
 	justify-content: space-around;
 	align-items: center;
     color: wheat;
+}
+
+
+
+
+/* Media Part will be here  */
+
+@media  screen and (max-width: 1000px) {
+
+    label[for="more"]{
+        display: block;
+    }
+
+    .section2 {
+		visibility: hidden;
+		opacity: 0;
+		position: absolute;
+		width: 300px;
+		height: 66vh;
+		background-color: #050043;
+		box-shadow: 0px 0px 2px 1px white;
+		right: 0px;
+		top: 23.5%;
+		z-index: 5;
+		overflow: scroll;
+		padding-left:10px;
+		transition: visibility ease-in-out 0.2s;
+		transition: opacity ease-in-out 0.2s;;
+	}
+
+    .section2::-webkit-scrollbar{
+        display: none;
+    }
+
+    .section1{
+        width: 100%;
+    }
+    
 }
 
 
